Bug 83089 - UI: Cannot select location in properties dialogue
Summary: UI: Cannot select location in properties dialogue
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.2.5.2 release
Hardware: All All
: medium normal
Assignee: Szymon Kłos
URL:
Whiteboard: target:5.1.0 target:5.0.0.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2014-08-26 09:05 UTC by Albrecht Müller
Modified: 2016-10-25 19:21 UTC (History)
11 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Albrecht Müller 2014-08-26 09:05:16 UTC
OS: Windows 7, LibreOffice Version 4.2.5.2, Writer

It is not possible to select the location information in the properties dialogue. Therefore it is impossible to use the copy and paste mechanism to transfer the document path to some other place.

How to reproduce:
Open some .odt document in the Writer component. Use File -> Properties... to show the "Properties" dialogue. You should see the contents selected by the "General" tab which contains type, location, size and other information. Using the tabulator key it is possible to move the focus to the various controls. If the control contains some information, e.g. document name, modification timestamp etc, it is possible to copy this content using the CTRL+C key.

Current behaviour: If the "Type" information is selected, the next focus position is the "Size" position. It is not possible to select the location information using the "Tab" key, the ALT+L shortcut or the mouse.

Expected behaviour: The next focus location after the "Type" information is the "Location" information, and it should be possible to access this information in the same way as the other information fields, using the "Tab" key, the corresponding shortcut or the mouse.
Comment 1 Yousuf Philips (jay) (retired) 2014-09-14 01:12:10 UTC
Hello Albrecht,

Thank you for submitting the bug. I can confirm that the bug is available in 4.2.6, and master on Linux. It previously worked in 4.1.6.
Comment 2 Jean-Baptiste Faure 2014-09-14 09:27:35 UTC
Reproducible for me with version 4.3.3.0.0+ built at home under Ubuntu 14.04 x86-64 (Build ID: 8618534a73e8c6b5cddb6a7cacedcc38b62bab33).

Reproducible for me with version 4.2.7.0.0+ built at home under Ubuntu 14.04 x86-64 (Build ID: a7f7b93299a9a7af8b243099f78f236172c4cb51).

Could be possible that this behavior would be intentional ?

Best regards. JBF
Comment 3 Dave Richards 2014-12-05 15:24:52 UTC
 1d4980621741d3050a5fe61b247c157d769988f2 is the first bad commit
commit 1d4980621741d3050a5fe61b247c157d769988f2
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Fri Oct 18 05:20:46 2013 +0000

    source-hash-89d01a7d8028ddb765e02c116d202a2435894217
    
    commit 89d01a7d8028ddb765e02c116d202a2435894217
    Author:     Armin Le Grand <alg@apache.org>
    AuthorDate: Mon Sep 2 12:13:37 2013 +0000
    Commit:     Caolán McNamara <caolanm@redhat.com>
    CommitDate: Mon Sep 2 16:34:38 2013 +0100
    
        Resolves: #i122820# Corrected graphics creation...
    
        allow bigger limits if directly requested
    
        (cherry picked from commit 50f1445bda91cb44a1a1e8636ab0bcb6a8c4f381)
    
        Conflicts:
        	svx/source/unodraw/UnoGraphicExporter.cxx
    
        Change-Id: I33576ef9f95b9f8a9fa0ab6f6d83c93ecec8da9f

:100644 100644 12e94aaaed81846299f7c651da9b7cdfdaea5416 3ea3ab6a554de6fa9acd2b2b729fdf95fbcbec89 M	ccache.log
:100644 100644 3ea3177036d3389e1c40e9c6c93c81c233297cd7 42aa4ed806925f758dc4ad21f3bfca3ddfe9634e M	commitmsg
:100644 100644 0078d4a35a067ec61accb624b78ced5467d42364 d97ca301b531fb9124d8fa8411ca5aa44cf2a6c8 M	dev-install.log
:100644 100644 43dbebe038278acde4ca66aa7e8abcced5bdd20c 54e4b02174c8ab14e3f07c184475efc9604ca4ce M	make.log
:040000 040000 e21ced5098ed0fafcf81768c9d8e8f8e4e34888f a428a225b1c5ac7c015d860144b2eb17d072ad84 M	opt

# good: [e02439a3d6297a1f5334fa558ddec5ef4212c574] source-hash-6b8393474974d2af7a2cb3c47b3d5c081b550bdb
git bisect good e02439a3d6297a1f5334fa558ddec5ef4212c574
# bad: [4850941efe43ae800be5c76e1102ab80ac2c085d] source-hash-980a6e552502f02f12c15bfb1c9f8e6269499f4b
git bisect bad 4850941efe43ae800be5c76e1102ab80ac2c085d
# bad: [4850941efe43ae800be5c76e1102ab80ac2c085d] source-hash-980a6e552502f02f12c15bfb1c9f8e6269499f4b
git bisect bad 4850941efe43ae800be5c76e1102ab80ac2c085d
# bad: [a043626b542eb8314218d7439534dce2fc325304] source-hash-9379a922c07df3cdb7d567cc88dfaaa39ead3681
git bisect bad a043626b542eb8314218d7439534dce2fc325304
# good: [f6a86d8812bc1db2fee07af4d54b7af6a553cc59] source-hash-e4ebe80be51fb33545091aa4f0bbc0ea2fe674f0
git bisect good f6a86d8812bc1db2fee07af4d54b7af6a553cc59
# bad: [186181c7d6a957b0fcdbc7ff66866f1abfff988e] source-hash-79850f25987d12c8ee91dfd0f699a562f341bf67
git bisect bad 186181c7d6a957b0fcdbc7ff66866f1abfff988e
# good: [1711ac6e2188f8fed8e027a2241fe878c898a604] source-hash-8a569f1c4decc7440e9dae1af35d7fa59c3b0121
git bisect good 1711ac6e2188f8fed8e027a2241fe878c898a604
# good: [f47efc54c1f3916052ffda455e5ea179f6aa400a] source-hash-511354504cfc2c8f002752775d5bb336b01bd6ab
git bisect good f47efc54c1f3916052ffda455e5ea179f6aa400a
# good: [f2554751603ad8537257b3cf52d6171056c76eeb] source-hash-f42768fe0b60ecbbe9c68d775329bf28c0690131
git bisect good f2554751603ad8537257b3cf52d6171056c76eeb
# bad: [b946f469e1740faa557741120989330fa22df995] source-hash-d3ff876f3c7f441fd72a037ed31fb973f223ca6d
git bisect bad b946f469e1740faa557741120989330fa22df995
# bad: [1d4980621741d3050a5fe61b247c157d769988f2] source-hash-89d01a7d8028ddb765e02c116d202a2435894217
git bisect bad 1d4980621741d3050a5fe61b247c157d769988f2
Comment 4 Matthew Francis 2015-01-01 04:29:19 UTC
The below commit appears to be where the behaviour changed. The change seems to have been deliberate, although the commit message doesn't elaborate what the specific bug it targeted was apart from its connection with CMIS.

Unfortunately the original author no longer seems to be an active contributor. I wonder who has current knowledge of CMIS?


commit b56a9a22dadc2f78be1c898505a884774fc19e25
Author: Cao Cuong Ngo <cao.cuong.ngo@gmail.com>
Date:   Mon Jul 8 22:21:10 2013 +0200

    CMIS properties dialog: Fixed the "*" location bug
    
    Tried to change the WB_PASSWORD but didn't work.
    
    Change-Id: Id872fe041fc16b5d705c779372e2084f686cfd07
Comment 5 Matthew Francis 2015-01-01 05:47:57 UTC
Adding Cc: to mihai.mv13@gmail.com

Hi - apologies for picking on you at random as someone (possibly more or less the only person) who has recently touched CMIS. Can you think of any reason the commit mentioned above on this bug (http://cgit.freedesktop.org/libreoffice/core/commit/?id=b56a9a22dadc2f78be1c898505a884774fc19e25) would have been necessary in some way that is related to CMIS?

(the effect of the commit is to prevent you selecting the file location in the File -> Properties "General" tab)

Thanks
Comment 6 Yousuf Philips (jay) (retired) 2015-01-01 09:28:00 UTC
Well if i had to guess, i would say that maybe the file location on the CMIS shouldnt be selectable for some strange reason. :D

@Cédric: you have any thoughts on this matter of why the file path has been disabled from selection in the File -> Properties -> "General" tab.
Comment 7 Norbert X 2015-01-31 21:02:16 UTC
I can confirm this bug in Writer and Calc in 

Version: 4.4.0.3
Build ID: 40m0(Build:3)
Locale: en_US
Comment 8 Michael Stahl 2015-07-03 11:41:48 UTC
thanks to Szymon who made the field selectable without it widening the window if it contains too much text
Comment 9 Commit Notification 2015-07-03 11:42:55 UTC
Szymon Kłos committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7976422efedb973c17d7af3f6fa69325c632a0d2

tdf#83089 : Cannot select location in properties dialogue

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2015-07-03 11:46:39 UTC
Szymon Kłos committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4acd1debc1cf1b002e3a3555c4dd7579d3f65e24&h=libreoffice-5-0

tdf#83089 : Cannot select location in properties dialogue

It will be available in 5.0.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Robinson Tryon (qubit) 2015-12-17 08:33:57 UTC Comment hidden (obsolete)