tdf#83089 : Cannot select location in properties dialogue

Change-Id: I008622cb8178cb1c83f72e5919ebc1be0dd9a2d5